fix rendering bug

--- a/_posts/2017-05-31-codestock-2017.md
+++ b/_posts/2017-05-31-codestock-2017.md
@@ -17,8 +17,7 @@ As we all know many people in technology (like myself) tend to not be overly soc
 gave some tips for becoming a social developer and pointed out the differences in being shy and introverted. He also 
 pointed out some helpful tips for meeting other developers. Most of them are especially useful at conferences.
 
-Developers love to talk but they don't like to start the conversation.
-- Jeremy Clark
+Developers love to talk but they don't like to start the conversation. - Jeremy Clark
 {: .notice--info} 
 
 [Chris Keathley](https://twitter.com/chriskeathley) gave us some pointers on becoming a pro at git. During the talk he
@@ -30,8 +29,7 @@ an introduction to forensic analysis. His talk was an live demo of using various
 a machine infected with stuxnet. While day-to-day I am not likely to find myself analyzing malware it was definitely
 interesting to learn about tools and techniques involved.
 
-Security Incidents are Inevitable
-- Jared Smith
+Security Incidents are Inevitable - Jared Smith
 {: .notice--info}
 
 I wrapped up the conference listening to [Matt Honeycutt](https://twitter.com/matthoneycutt) talk about modern JavaScript
