--- a/_posts/2017-05-31-codestock-2017.md
+++ b/_posts/2017-05-31-codestock-2017.md
@@ -13,7 +13,7 @@ The event started out on Friday with a keynote [Hadi Hariri](https://twitter.com
 silver bullet syndrome. The talk takes the audience on a humorous journey through technologies that were supposed to 
 solve all of our problems, but yet now we have moved on and don't view them so favorably anymore.
 
-As we all know many people in technology (like myself) tend to not be overly social. [Jeremy Clark](https://twitter.com/jeremybytes) 
+As we all know, many people in technology (like myself) tend to not be overly social. [Jeremy Clark](https://twitter.com/jeremybytes) 
 gave some tips for becoming a social developer and pointed out the differences in being shy and introverted. He also 
 pointed out some helpful tips for meeting other developers. Most of them are especially useful at conferences.
 
