--- a/_posts/2017-05-31-codestock-2017.md
+++ b/_posts/2017-05-31-codestock-2017.md
@@ -1,5 +1,6 @@
 ---
 title: CodeStock 2017
+categories: Conference CodeStock
 ---
 
 At the beginning of this month I attended [CodeStock](http://www.codestock.org/) in Knoxville, TN. This was my second 
