Fix some styling issues

--- a/_posts/2017-05-31-codestock-2017.md
+++ b/_posts/2017-05-31-codestock-2017.md
@@ -1,6 +1,8 @@
 ---
 title: CodeStock 2017
-categories: Conference
+categories: 
+  - Conference
+  - CodeStock
 ---
 
 At the beginning of this month I attended [CodeStock](http://www.codestock.org/) in Knoxville, TN. This was my second 
@@ -18,8 +20,11 @@ As we all know, many people in technology (like myself) tend to not be overly so
 gave some tips for becoming a social developer and pointed out the differences in being shy and introverted. He also 
 pointed out some helpful tips for meeting other developers. Most of them are especially useful at conferences.
 
-Developers love to talk but they don't like to start the conversation. - Jeremy Clark
-{: .notice--info} 
+{% include quote 
+   text="Developers love to talk but they don't like to start the conversation."
+   author="Jeremy Clark"
+%}
+
 
 [Chris Keathley](https://twitter.com/chriskeathley) gave us some pointers on becoming a pro at git. During the talk he
 pointed out many useful git commands to improve your workflow. Plus he told us the golden rule for using git: **Don't Panic**. 
@@ -30,8 +35,10 @@ an introduction to forensic analysis. His talk was an live demo of using various
 a machine infected with stuxnet. While day-to-day I am not likely to find myself analyzing malware it was definitely
 interesting to learn about tools and techniques involved.
 
-Security Incidents are Inevitable - Jared Smith
-{: .notice--info}
+{% include quote 
+   text="Security Incidents are Inevitable"
+   author="Jared Smith"
+%}
 
 I wrapped up the conference listening to [Matt Honeycutt](https://twitter.com/matthoneycutt) talk about modern JavaScript
 techniques and how to deal with the fact that we are now living under the JavaScript regime.
